--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
+  background-color: rgb(53, 54, 58);
   margin: 0;
-  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
